# north-and-south-wars

./: .gitignore  .gitmodules  Brewfile  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.ninja  hacks.c  main.cpp
adf/S/: startup-sequence
assets/: arrows.aseprite  map.tmx  menu.aseprite  mouse.aseprite  palette.aseprite  small_font.aseprite  tiles.aseprite  tiles.tsx  units.aseprite
assets/campaign/: campaign.aseprite  flags.aseprite
assets/mission/: 0.tmx  1.tmx  2.tmx  3.tmx  arrows.aseprite  map.tmx  menu.aseprite  tiles.aseprite  tiles.tsx  units.aseprite  units.tsx
assets/mission/attack/: bg_bridge.aseprite  bg_mountain.aseprite  bg_plain.aseprite  bg_road.aseprite  bg_woods.aseprite
assets/mission/encounter/: bg_mountain.aseprite  bg_road.aseprite  bg_woods.aseprite  units.aseprite
assets/mission/encounter/sounds/: hurt.flac
assets/mission/encounter/sounds/attack/: infantry.flac
assets/mission/sounds/: footsteps.flac  zoom_in.flac  zoom_out.flac
assets/sounds/: cancel.flac  ok.flac
assets/title/: title.aseprite
game/: CMakeLists.txt  bitmap.h  chip.cpp  chip.h  copper.cpp  copper.h  custom.h  frame_chip.h  game.cpp  game.h  libs.cpp  libs.h  loader.cpp  main.cpp  mouse.cpp  mouse.h  system.cpp  system.h  types.h
game/amiga/: CMakeLists.txt
game/amiga/include/amiga/: bitmap.h  cia.h  copper.h  custom.h  mouse.h  sprite.h  system.h
game/amiga/src/: doynax.cpp  libs.cpp  mouse.cpp  system.cpp
game/game/: CMakeLists.txt  copper.h  custom.h  doynax.cpp  doynax.h  frame_chip.h  game.h  loader.h  main.cpp  mouse.cpp  system.cpp
game/game/include/game/: callbacks.h  campaign_map.h  end_sequence.h  forces.h  game.h  intro.h  loader.h  map.h  menu.h  mission.h  mission_lost.h  mission_won.h  missions.h  movement_types.h  pathfinding.h  screen.h  sounds.h  teams.h  terrain.h  tile.h  title.h  unit_defs.h  units.h
game/game/include/game/mission/: attackable.h  enemy_pathfinding.h  map.h  mission.h  movement_cost.h  player_pathfinding.h  terrain.h  tile.h  tile_coords.h  unit.h  unit_defs.h  unit_types.h
game/game/include/game/mission/encounter/: encounter.h
game/game/src/: campaign_map.cpp  campaign_map.h  dev.h  end_sequence.cpp  end_sequence.h  game.cpp  intro.cpp  intro.h  mission.cpp  mission.h  mission_lost.cpp  mission_lost.h  mission_won.cpp  mission_won.h  movement_cost.cpp  pathfinding.cpp  pathfinding.h  terrain.cpp  tile.cpp  title.cpp  title.h  unit_defs.cpp  units.cpp
game/game/src/mission/: attackable.cpp  attackable.h  enemy_pathfinding.cpp  enemy_pathfinding.h  menu.cpp  menu.h  mission.cpp  mission.h  movement_cost.cpp  pathfinding.cpp  pathfinding.h  player_pathfinding.cpp  player_pathfinding.h  tile.cpp  unit_defs.cpp
game/game/src/mission/encounter/: damage.cpp  damage.h  encounter.cpp  encounter.h
game/main/: CMakeLists.txt  audio.cpp  audio.h  background.h  blit.h  chip.cpp  chip.h  copper.h  draw.cpp  draw.h  draw_campaign_map.cpp  draw_campaign_map.h  draw_end_sequence.cpp  draw_end_sequence.h  draw_intro.cpp  draw_intro.h  draw_mission.cpp  draw_mission.h  draw_mission_attack.cpp  draw_mission_attack.h  draw_mission_encounter.cpp  draw_mission_encounter.h  draw_mission_lost.cpp  draw_mission_lost.h  draw_mission_tiles.cpp  draw_mission_tiles.h  draw_mission_won.cpp  draw_mission_won.h  draw_title.cpp  draw_title.h  fast.cpp  fast.h  frame_chip.h  frame_fast.h  game.cpp  input.cpp  loader.cpp  main.cpp  palette.h  playfield.h  (+5 more)
game/main/assets/: arrows.h  menu_bitmaps.h  small_font.h  tileset.h  units.h  wave.h
game/main/assets/campaign/: campaign_bitmap.h  flag_bitmaps.h
game/main/assets/mission/: arrows.h  menu_bitmaps.h  tileset.h  unit_bitmaps.h
game/main/assets/mission/attack/: bg.h  units.h
game/main/assets/mission/encounter/: bg.h  units.h
game/main/assets/title/: title_bitmap.h
game/support/: CMakeLists.txt  gcc8_c_support.c
game/util/: CMakeLists.txt
obsidian/: Campaign map.md  Flow.canvas  Mission.canvas
obsidian/Design/: Flow.canvas
obsidian/Design/Mission/: Mission.canvas  Units.md
obsidian/Tech design/: Palette.md  Tiles.md
tools/: Cargo.toml
tools/tmx2map/: Cargo.toml
tools/tmx2map/src/: main.rs
tools/tsx2bpl/: Cargo.toml
tools/tsx2bpl/src/: main.rs
