add_library(
    game
    OBJECT
    include/game/mission/forces.h
    include/game/mission/map.h
    include/game/mission/menu.h
    include/game/mission/mission.h
    include/game/mission/movement_cost.h
    include/game/mission/movement_types.h
    include/game/mission/pathfinding.h
    include/game/mission/terrain.h
    include/game/mission/tile_coords.h
    include/game/mission/tile.h
    include/game/mission/unit_defs.h
    include/game/mission/unit_types.h
    include/game/callbacks.h
    include/game/campaign_map.h
    include/game/game.h
    include/game/intro.h
    include/game/screen.h
    include/game/title.h
    src/campaign_map.cpp
    src/campaign_map.h
    src/dev.h
    src/game.cpp
    src/intro.cpp
    src/intro.h
    src/mission.cpp
    src/mission.h
    src/movement_cost.cpp
    src/pathfinding.cpp
    src/pathfinding.h
    src/tile.cpp
    src/title.cpp
    src/title.h
    src/unit_defs.cpp
    )

target_include_directories(
    game
    PUBLIC
    include
    )

target_link_libraries(
    game
    PUBLIC
    util
    )
