add_library(
    game
    OBJECT
    include/game/mission/encounter/encounter.h
    include/game/mission/attackable.h
    include/game/mission/enemy_pathfinding.h
    include/game/mission/forces.h
    include/game/mission/map.h
    include/game/mission/menu.h
    include/game/mission/mission.h
    include/game/mission/movement_cost.h
    include/game/mission/movement_types.h
    include/game/mission/player_pathfinding.h
    include/game/mission/terrain.h
    include/game/mission/tile_coords.h
    include/game/mission/tile.h
    include/game/mission/unit_defs.h
    include/game/mission/unit_types.h
    include/game/callbacks.h
    include/game/campaign_map.h
    include/game/end_sequence.h
    include/game/game.h
    include/game/intro.h
    include/game/mission_lost.h
    include/game/mission_won.h
    include/game/missions.h
    include/game/screen.h
    include/game/sounds.h
    include/game/title.h
    src/mission/encounter/damage.cpp
    src/mission/encounter/damage.h
    src/mission/encounter/encounter.cpp
    src/mission/encounter/encounter.h
    src/mission/attackable.cpp
    src/mission/attackable.h
    src/mission/enemy_pathfinding.cpp
    src/mission/enemy_pathfinding.h
    src/mission/menu.cpp
    src/mission/menu.h
    src/mission/mission.cpp
    src/mission/mission.h
    src/mission/movement_cost.cpp
    src/mission/player_pathfinding.cpp
    src/mission/player_pathfinding.h
    src/mission/tile.cpp
    src/mission/unit_defs.cpp
    src/campaign_map.cpp
    src/campaign_map.h
    src/dev.h
    src/end_sequence.cpp
    src/end_sequence.h
    src/game.cpp
    src/intro.cpp
    src/intro.h
    src/mission_lost.cpp
    src/mission_lost.h
    src/mission_won.cpp
    src/mission_won.h
    src/title.cpp
    src/title.h
    )

target_include_directories(
    game
    PUBLIC
    include
    )

target_link_libraries(
    game
    PUBLIC
    util
    )
